--- a/index.html
+++ b/index.html
@@ -2,9 +2,174 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Test</title>
+    meta name="viewport" content="width=device-width, initial-scale=1.0">
+    meta name="description" content="Seth Markle's WDD 230 Assignment Portal">
+    <title>WDD 230 - Course Homepage</title>
+    <link rel="stylesheet" href="style/normalie.css">
+    <link rel="stylesheet" href="styles/style.css>">
+    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 654px">
+    <link rel="stylesheet" href="styles/small.css" media="(max-width: 509px)">
+    <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 310px)">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
 </head>
 <body>
-    Did I get this to work?
+    <header> grid
+        <h1>
+        "Seth"
+        <span class="brk1"></span>
+        "Markle"
+        </h1>
+        <img src="images/profile.JPG" alt="Seth Markle profile picture">
+    </header>
+    <main>
+        <h2>
+            "WDD 230"
+            <span class="unBrk2">:</span>
+            <span class="brk2"></span>
+            "Assignment Portal"
+        </h2>
+        <ul onscroll="scrollDown(this)">
+        <li>
+            ::marker
+            "Lesson 02:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson2/title.html">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            ::marker
+            "Lesson 03:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson3title.html/">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            ::marker
+            "Lesson 04:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson4/title.html">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            ::marker
+            "Lesson 05:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson5/title.html>">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            ::marker
+            "Lesson 06:"
+            <ul>
+                <li>
+                ::marker
+                <a href="./lesson6/title.html">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            ::marker
+            "Lesson 07:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson7/title.html">title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            ::marker
+            "Lesson 08:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson8/title.html">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            ::marker
+            "Lesson 07:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson7/title.html">title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            ::marker
+            "Lesson 09:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson9/title.html">Title</a>
+                </li>
+            </ul>
+        </li>  
+        <li>
+            ::marker
+            "Lesson 07:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson7/title.html">title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            ::marker
+            "Lesson 10:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson10/title.html">Title</a>
+                </li>
+            </ul>
+        </li> 
+        <li>
+            ::marker
+            "Lesson 07:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson7/title.html">title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            ::marker
+            "Lesson 11:"
+            <ul>
+                <li>
+                    ::marker
+                    <a href="./lesson11/title.html">Title</a>
+                </li>
+            </ul>
+        </li>  
+        <div id="scroll-down" class></div>   
+    </main>
+    <footer>
+        "@"
+        <span id="year">2022</span>
+        "|Seth Markle|"
+        <span class="brk1"></span>
+        <span class="unBrk1">|</span>
+        "BYU-Idaho"
+        <a href="https://byui.edu/online" target="_blank">BYU-Idaho</a>
+        <br>
+    </footer>
 </body>
 </html>
