--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     meta name="viewport" content="width=device-width, initial-scale=1.0">
     meta name="description" content="Seth Markle's WDD 230 Assignment Portal">
     <title>WDD 230 - Course Homepage</title>
-    <link rel="stylesheet" href="style/normalie.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css>">
     <link rel="stylesheet" href="styles/medium.css" media="(max-width: 654px">
     <link rel="stylesheet" href="styles/small.css" media="(max-width: 509px)">
@@ -171,5 +171,6 @@
         <a href="https://byui.edu/online" target="_blank">BYU-Idaho</a>
         <br>
     </footer>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
