--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    meta name="viewport" content="width=device-width, initial-scale=1.0">
-    meta name="description" content="Seth Markle's WDD 230 Assignment Portal">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Seth Markle's WDD 230 Assignment Portal"/>
     <title>WDD 230 - Course Homepage</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css>">
@@ -30,31 +30,28 @@
         </h2>
         <ul onscroll="scrollDown(this)">
         <li>
-            ::marker
             "Lesson 02:"
             <ul>
                 <li>
-                    ::marker
-                    <a href="./lesson2/title.html">Title</a>
+
+                    <a href="./lesson2/index.html">Title</a>
                 </li>
             </ul>
         </li>
         <li>
-            ::marker
             "Lesson 03:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson3title.html/">Title</a>
                 </li>
             </ul>
         </li>
         <li>
-            ::marker
             "Lesson 04:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson4/title.html">Title</a>
                 </li>
             </ul>
@@ -64,7 +61,7 @@
             "Lesson 05:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson5/title.html>">Title</a>
                 </li>
             </ul>
@@ -84,7 +81,7 @@
             "Lesson 07:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson7/title.html">title</a>
                 </li>
             </ul>
@@ -94,7 +91,7 @@
             "Lesson 08:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson8/title.html">Title</a>
                 </li>
             </ul>
@@ -104,7 +101,7 @@
             "Lesson 07:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson7/title.html">title</a>
                 </li>
             </ul>
@@ -114,7 +111,7 @@
             "Lesson 09:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson9/title.html">Title</a>
                 </li>
             </ul>
@@ -124,7 +121,7 @@
             "Lesson 07:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson7/title.html">title</a>
                 </li>
             </ul>
@@ -134,7 +131,7 @@
             "Lesson 10:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson10/title.html">Title</a>
                 </li>
             </ul>
@@ -144,7 +141,7 @@
             "Lesson 07:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson7/title.html">title</a>
                 </li>
             </ul>
@@ -154,7 +151,7 @@
             "Lesson 11:"
             <ul>
                 <li>
-                    ::marker
+
                     <a href="./lesson11/title.html">Title</a>
                 </li>
             </ul>
