--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -51,7 +51,7 @@
                     </h2>
                     <p>
                         <section class="grid">
-                <img src="images/website-logo.png" alt="weather-or-not website logo">
+                <img src="images/website-logo.png" alt="website logo goes here">
                 <div>
                     <h2>Site Purpose</h2>
                     <p>
