--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -1,75 +1,69 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design Principles</title>
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;family=Ubuntu:wght@300&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 894px) and (min-width: 650px)">
-    <link rel="stylesheet" href="styles/small.css" media="(max-width: 649px)">
-</head>
-<body>
-    <div class="shadow-blocker-1"></div>
-    <div class="shadow-blocker-2"></div>
-    <header>
-        <h1>Where to visit in York County</h1>
-        <span>We got places to see.</span>
-    </header>
-    <nav>
-        <ul>
-            <li>
-                <a class="at" href=".">Home</a>
-            </li>
-            <li>
-                <a class="" href="./target-audience.html">Target Audience</a>
-            </li>
-            <li>
-                <a class="" href="./color-scheme.html">Color Scheme</a>
-            </li>
-            <a class="" href="./typography.html">Typography</a>
-        </ul>
-    </nav>
-    <main>
-        <section>
-            <h3>Domain Name</h3>
-            <p>
-                The domain name that I found available is
-                <a class="" href="./typography.html">Typography</a>
-            </p>
-            <p>
-                The domain name of
-                <a href="#">website goes here.com</a>
-                was taken so, I had to use a domain with .org.
-            </p>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Your Local Weather | Home</title>
+        <meta name="description" content="Your Local Weather site planning page. This
+                    page shows the purpose of the site that I am creating.  The logo that I have selected and the domain name the I chose for the possibilites.             as well as the domain name that I researched for possibilities.">
+        <link rel="icon" href="images/favicon.ico" type="icon">
+        <link rel="stylesheet" href="styles/normalize.css">
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/medium.css" media="(max-width: 950px)">
+        <link rel="stylesheet" href="styles/small.css" media="(max-width: 640px)">
+        <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 299px)">
+    </head>
+    <body>
+        <div class="shadow-blocker-1"></div>
+        <div class="shadow-blocker-2"></div>
+        <header>
+            <h1>Weather or Not</h1>
+            <span>We've got the weather information you need!</span>
+        </header>
+        <nav>
+            <ul>
+                <li><a class="at" href=".">Home</a></li>
+                <li><a class="" href="./target-audience.html">Target Audience</a></li>
+                <li><a class="" href="./color-scheme.html">Color Scheme</a></li>
+                <li><a class="" href="./typography.html">Typography</a></li>
+            </ul>
+        </nav>
+        <main>
+            <section>
+                <h2>Domain Name</h2>
+                <p>
+                    The domain name that I found that was available is
+                    <a target="_blank" href="PUT THE WEBSITE HERE">WEBSITE HERE.org</a>
+                </p>
+                <p>
+                    The domain name of <a href="#">WEBSITE HERE</a>
+                    COMMENTS THAT I NEED TO ADD
+                </p>
             </section>
             <section class="grid">
-                <img src="images/website-logo.png" alt="website logo here"
-                <div>
-                    <h2>
-                        Site Purpose
-                    </h2>
-                    <p>
-                        <section class="grid">
-                <img src="images/website-logo.png" alt="website logo goes here">
+                <img src="images/website-logo.png" alt="your local weather website logo">
                 <div>
                     <h2>Site Purpose</h2>
                     <p>
-                        The purpose of this site is to provide places to visit in the county area.
+                        The purpose of this site is to provide weather
+                        to those around the areas of York, Shilo
+                        Dover, and Red Lion.
                     </p>
                     <p>
-                        With a simple layout and easy navigation, the
-                        visitors of those areas can use this site to find
-                        places to go and any other information relating
-                        to the area.
+                        I hope to make a simple enough layout that will navigate with ease.
+                        The residents of these areas can use this site to find
+                        the weather for there area.
                     </p>
                 </div>
             </section>
         </main>
-    <footer>
-        ©<span id="year">2022</span> | Seth Markle
-        <span id="lst-updt">Last updated: 09/24/2022 10:48:35</span>
-    </footer>
-    <script src="scripts/dates.js"></script>
-</body>
+        <footer>
+            &copy;<span class="year">2022</span> Seth Markle | <a target="_blank" href="https://byui.edu/online">BYUI Online Learning</a>
+            <span class="last-updated">Something didn't load right, please refresh.</span>
+        </footer>
+        <div id="too-small">
+            <h3>Your screen size is too small to view this page</h3>
+        </div>
+        <script src="scripts/script.js"></script>
+    </body>
 </html>
