--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -18,7 +18,7 @@
         <div class="shadow-blocker-2"></div>
         <header>
             <h1>Weather Forcast</h1>
-            <span>Your local weather for the week.</span>
+            <span>Your local weather for the next 5 days.</span>
         </header>
         <nav>
             <ul>
