--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Preston Town Page</title>
+        <title>York Weather</title>
         <meta name="description" content="Weather for York Pennsylvania.
                         The information about the weather for the city of York and the surronding areas.">
         <link rel="icon" href="images/favicon.ico" type="icon">
