--- a/lesson5/bom.html
+++ b/lesson5/bom.html
@@ -1,4 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book of Mormon - Top 25</title>
+    </head>
+<body>
+    <header>
+    </header>
+    <main>
+        <div class="input">
+            <label>Enter Book and Chapter<br>
+                <input type="text" id="favchap" placeholder="Alma 5" required></label>
+            <button type="submit">Add Chapter</button>
+        </div>
+        <div class="listcontainer">
+            <ul class="list">
+            </ul>
+        </div>
+    </main>
+    <footer>
+    </footer>
+</body>
+</html>
