All redone to the end of Lesson 5

--- a/lesson/index.html
+++ b/lesson/index.html
@@ -1,83 +1,50 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html class="wf-gugi-n4-active wf-active" lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design Principles</title>
+    <meta name="description" content="Seth Markle's WDD 230 Assignment Portal">
+    <title>WDD 230 - Course Homepage</title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;family=Ubuntu:wght@300&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 894px) and (min-width: 650px)">
-    <link rel="stylesheet" href="styles/small.css" media="(max-width: 649px)">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 654px)">
+    <link rel="stylesheet" href="styles/small.css" media="(max-width: 509px)">
+    <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 310px)"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
 </head>
 <body>
     <header>
-        <h1>Design Principles Document</h1>
-        <span>Seth Markle</span>
+        <h1>Seth <span class="brk1"></span> Markle</h1>
+        <img src="images/profile.JPG" alt="Seth Markle's picture">
     </header>
     <main>
-        <section>
-            <h3>Clean Design</h3>
-            <div>
-            <p><span>Google Fonts API</span></p>
-            <p><a target="_blank" href="https://fonts.google.com/">fonts.google.com</a></p>
-            <img src="images/google-fonts-api-white-space-and-clean-design.png" alt="Google fonts api page for an example of white space and a clean design">
-            <p>
-                Google Fonts API has a good use of white-space making it have
-                a clean design. The spacing around all the objects allows
-                people who are viewing the page to stay calm when looking for
-                a font.
-            </p>
-            <p>
-                Clean design comes mostly from the fact that all the fonts
-                are separated into boxes and have spacing between them it
-                just makes it more simple.
-            </p>
-            </div>
-        </section>
-        <section>
-            <h3>Rule of Thirds</h3>
-            <div>
-            <p><span>Brigham Young University - Idaho</span></p>
-            <p><a target="_blank" href="https://byui.edu/">byui.edu</a></p>
-            <img src="images/byui-edu-rule-of-thirds.png" alt="example of 'rule of thirds' from byui's website">
-            <p>
-                The image at the bottom of the screenshot follows the "Rule
-                of Thirds", the focal point (the woman's face) is off to the
-                right and the text (another focal point) is off to the left.
-            </p>
-            <p>
-                When images and the text are aligned in that way, it, for one,
-                makes it easier to see the focus of the image as well as being
-                able to read the text, which is probably the reason why both
-                elements were place on the page...
-            </p>
-            </div>
-        </section>
-        <section>
-            <h3>Alignment</h3>
-            <div>
-            <p><span>GitHub</span></p>
-            <p><a target="_blank" href="https://www.github.com/">github.com</a></p>
-            <img src="images/github-alignment.png" alt="example of alignment from the GitHub website">
-            <p>
-                The 6 logos at the bottom are aligned (in pairs) vertically
-                and horizontally, it makes it simple and easy to understand.
-                All the elements on the page are horizontally centered,
-                making a direction of reading.
-            </p>
-            <p>
-                Alignment is probably one of the most important parts of design
-                principles. You can use alignment to do nearly all of the other
-                ideas/concepts. If you know how to use the alignment techniques
-                properly, it will make your page look more appealing.
-            </p>
-            </div>
-        </section>
+        <h2>WDD 230<span class="unBrk2">:</span><span class="brk2"></span> Assignment Portal</h2>
+        <ul onscroll="scrollDown(this)">
+            <li>Lesson 02:
+                <ul>
+                    <li><a href="./lesson02/design-principles.html">Design Principles</a></li>
+                </ul>
+            </li>
+            <li>Lesson 03:
+                <ul>
+                    <li><a href="./lesson3/">Site Planning Page</a></li>
+                </ul>
+            </li>
+            <li>Lesson 04:
+                <ul>
+                    <li><a href="./lesson4/York-4.html">York County Homepage</a></li>
+                </ul>
+            </li>
+            <li>Lesson 05:
+                <ul>
+                    <li><a href="./lesson5/York-5.html">York County Homepage (Continued)</a></li>
+                </ul>
+            </li>
     </main>
     <footer>
-        ©<span id="year">2022</span> | Seth Markle
-        <span id="lst-updt">Last updated: 09/24/2022 10:48:35</span>
+        ©<span id="year">2022</span> | Seth Markle <span class="brk1"></span><span class="unBrk1">|</span> Idaho | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a><br>
+        <span id="updated">Last Updated: 10/17/2022 10:44:49 am</span>
     </footer>
-    <script src="scripts/dates.js"></script>
-
-</body></html>
+    <div id="not-reasonable-size"><div>Sorry,<br>You can't view this page that small!</div></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src="scripts/script.js"></script>
+</body>
+</html>
