--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>York Weather</title>
-        <meta name="description" content="Weather for York Pennsylvania.
-                        The information about the weather for the city of York and the surronding areas.">
-        <link rel="icon" href="images/favicon.ico" type="icon">
-        <link rel="stylesheet" href="styles/normalize.css">
-        <link rel="stylesheet" href="styles/style.css">
-        <link rel="stylesheet" href="styles/medium.css" media="(max-width: 1040px)">
-        <link rel="stylesheet" href="styles/small.css" media="(max-width: 850px)">
-        <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 299px)">
-    </head>
-    <body>
-        <div class="shadow-blocker-1"></div>
-        <div class="shadow-blocker-2"></div>
-        <header>
-            <h1>Weather Forcast</h1>
-            <span>Your local weather for the next 5 days.</span>
-        </header>
-        <nav>
-            <ul>
-                <li class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
+<html lang="en"><head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Preston Town Page</title>
+    <meta name="description" content="Weather or Not's page for Preston Idaho.
+                    Information about the weather for the city of Preston and
+                    neighboring towns, cities, and areas.">
+    <link rel="icon" href="images/favicon.ico" type="icon">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 1040px)">
+    <link rel="stylesheet" href="styles/small.css" media="(max-width: 850px)">
+    <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 299px)">
+</head>
+<body>
+    <div class="shadow-blocker-1"></div>
+    <div class="shadow-blocker-2"></div>
+    <header>
+        <h1>Weather Forcast</h1>
+        <span>Your local weather for the next 5 days.</span>
+    </header>
+    <nav>
+        <ul>
+            <li class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li><a class="  " href="#">Home</a></li>
                 <li><a class="at" href="#">York</a></li>
                 <li><a class="  " href="#">Shilo</a></li>
