--- a/lesson/index.html
+++ b/lesson/index.html
@@ -6,8 +6,8 @@
     <title>WDD 230 - Course Homepage</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 654px)">
-    <link rel="stylesheet" href="styles/small.css" media="(max-width: 509px)">
+    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 894px) and (min-width: 650px)">
+    <link rel="stylesheet" href="styles/small.css" media="(max-width: 649px)">
     <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 310px)"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
 </head>
 <body>
