--- a/lesson/index.html
+++ b/lesson/index.html
@@ -20,22 +20,22 @@
         <ul onscroll="scrollDown(this)">
             <li>Lesson 02:
                 <ul>
-                    <li><a href="./lesson02/design-principles.html">Design Principles</a></li>
+                    <li><a href="../lesson02/design-principles.html">Design Principles</a></li>
                 </ul>
             </li>
             <li>Lesson 03:
                 <ul>
-                    <li><a href="./lesson3/">Site Planning Page</a></li>
+                    <li><a href="../lesson3/">Site Planning Page</a></li>
                 </ul>
             </li>
             <li>Lesson 04:
                 <ul>
-                    <li><a href="./lesson4/York-4.html">York County Homepage</a></li>
+                    <li><a href="../lesson4/York-4.html">York County Homepage</a></li>
                 </ul>
             </li>
             <li>Lesson 05:
                 <ul>
-                    <li><a href="./lesson5/York-5.html">York County Homepage (Continued)</a></li>
+                    <li><a href="../lesson5/York-5.html">York County Homepage (Continued)</a></li>
                 </ul>
             </li>
     </main>
