--- a/lesson/index.html
+++ b/lesson/index.html
@@ -20,7 +20,7 @@
         <ul onscroll="scrollDown(this)">
             <li>Lesson 02:
                 <ul>
-                    <li><a href="../lesson02/design-principles.html">Design Principles</a></li>
+                    <li><a href="../lesson02/">Design Principles</a></li>
                 </ul>
             </li>
             <li>Lesson 03:
