--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -46,7 +46,7 @@
                 <h2>Site Purpose</h2>
                 <p>
                     The purpose of this site is to provide weather
-                    to those around the areas of York, Shilo
+                    to those around the areas of York, Shilo,
                     Dover, and Red Lion.
                 </p>
                 <p>
