--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="styles/medium.css" media="(max-width: 654px">
     <link rel="stylesheet" href="styles/small.css" media="(max-width: 509px)">
     <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 310px)">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
+    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> " media="all">
 </head>
 <body>
     <header> grid
