--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/medium.css" media="(max-width: 654px">
     <link rel="stylesheet" href="styles/small.css" media="(max-width: 509px)">
     <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 310px)">
-    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="link rel="preconnect href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> " media="all">
 </head>
@@ -32,7 +32,7 @@
         </h2>
         <ul onscroll="scrollDown(this)">
         <li>
-            "Lesson 02:"
+            "Lesson 2:"
             <ul>
                 <li>
 
@@ -41,73 +41,73 @@
             </ul>
         </li>
         <li>
-            "Lesson 03:"
+            "Lesson 3:"
             <ul>
                 <li>
 
-                    <a href="./lesson3title.html/">Title</a>
+                    <a href="./lesson3/index.html/">Title</a>
                 </li>
             </ul>
         </li>
         <li>
-            "Lesson 04:"
+            "Lesson 4:"
             <ul>
                 <li>
 
-                    <a href="./lesson4/title.html">Title</a>
+                    <a href="./lesson4/index.html">Title</a>
                 </li>
             </ul>
         </li>
         <li>
-            "Lesson 05:"
+            "Lesson 5:"
             <ul>
                 <li>
 
-                    <a href="./lesson5/title.html>">Title</a>
+                    <a href="./lesson5/index.html>">Title</a>
                 </li>
             </ul>
         </li>
         <li>
-            "Lesson 06:"
+            "Lesson 6:"
             <ul>
                 <li>
-                <a href="./lesson6/title.html">Title</a>
+                <a href="./lesson6/index.html">Title</a>
                 </li>
             </ul>
         </li>
         <li>
-            "Lesson 07:"
+            "Lesson 7:"
             <ul>
                 <li>
 
-                    <a href="./lesson7/title.html">title</a>
+                    <a href="./lesson7/index.html">title</a>
                 </li>
             </ul>
         </li>
         <li>
-            "Lesson 08:"
+            "Lesson 8:"
             <ul>
                 <li>
 
-                    <a href="./lesson8/title.html">Title</a>
+                    <a href="./lesson8/index.html">Title</a>
                 </li>
             </ul>
         </li>
         <li>
-            "Lesson 07:"
+            "Lesson 9:"
             <ul>
                 <li>
 
-                    <a href="./lesson7/title.html">title</a>
+                    <a href="./lesson9/index.html">title</a>
                 </li>
             </ul>
         </li>
         <li>
-            "Lesson 09:"
+            "Lesson 0:"
             <ul>
                 <li>
 
-                    <a href="./lesson9/title.html">Title</a>
+                    <a href="./lesson10/index.html">Title</a>
                 </li>
             </ul>
         </li>  
@@ -116,7 +116,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson7/title.html">title</a>
+                    <a href="./lesson11/index.html">title</a>
                 </li>
             </ul>
         </li>
@@ -125,7 +125,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson10/title.html">Title</a>
+                    <a href="./lesson12/index.html">Title</a>
                 </li>
             </ul>
         </li> 
@@ -134,7 +134,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson7/title.html">title</a>
+                    <a href="./lesson13/index.html">title</a>
                 </li>
             </ul>
         </li>
@@ -143,7 +143,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson11/title.html">Title</a>
+                    <a href="./lesson14/index.html">Title</a>
                 </li>
             </ul>
         </li>  
