--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson2/index.html">Title</a>
+                    <a href="../lesson2/index.html">Title</a>
                 </li>
             </ul>
         </li>
@@ -45,7 +45,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson3/index.html/">Title</a>
+                    <a href="../lesson3/index.html/">Title</a>
                 </li>
             </ul>
         </li>
@@ -54,7 +54,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson4/index.html">Title</a>
+                    <a href="../lesson4/index.html">Title</a>
                 </li>
             </ul>
         </li>
@@ -63,7 +63,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson5/index.html>">Title</a>
+                    <a href="../lesson5/index.html>">Title</a>
                 </li>
             </ul>
         </li>
@@ -71,7 +71,7 @@
             "Lesson 6:"
             <ul>
                 <li>
-                <a href="./lesson6/index.html">Title</a>
+                <a href="../lesson6/index.html">Title</a>
                 </li>
             </ul>
         </li>
@@ -80,7 +80,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson7/index.html">title</a>
+                    <a href="../lesson7/index.html">title</a>
                 </li>
             </ul>
         </li>
@@ -89,7 +89,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson8/index.html">Title</a>
+                    <a href="../lesson8/index.html">Title</a>
                 </li>
             </ul>
         </li>
@@ -98,7 +98,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson9/index.html">title</a>
+                    <a href="../lesson9/index.html">title</a>
                 </li>
             </ul>
         </li>
@@ -107,7 +107,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson10/index.html">Title</a>
+                    <a href="../lesson10/index.html">Title</a>
                 </li>
             </ul>
         </li>  
@@ -116,7 +116,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson11/index.html">title</a>
+                    <a href="../lesson11/index.html">title</a>
                 </li>
             </ul>
         </li>
@@ -125,7 +125,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson12/index.html">Title</a>
+                    <a href="../lesson12/index.html">Title</a>
                 </li>
             </ul>
         </li> 
@@ -134,7 +134,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson13/index.html">title</a>
+                    <a href="../lesson13/index.html">title</a>
                 </li>
             </ul>
         </li>
@@ -143,7 +143,7 @@
             <ul>
                 <li>
 
-                    <a href="./lesson14/index.html">Title</a>
+                    <a href="../lesson14/index.html">Title</a>
                 </li>
             </ul>
         </li>  
