--- a/lesson/index.html
+++ b/lesson/index.html
@@ -30,12 +30,12 @@
             </li>
             <li>Lesson 04:
                 <ul>
-                    <li><a href="../lesson4/York-4.html">York County Homepage</a></li>
+                    <li><a href="../lesson4/index.html">York County Homepage</a></li>
                 </ul>
             </li>
             <li>Lesson 05:
                 <ul>
-                    <li><a href="../lesson5/York-5.html">York County Homepage (Continued)</a></li>
+                    <li><a href="../lesson5/index.html">York County Homepage (Continued)</a></li>
                 </ul>
             </li>
     </main>
@@ -43,7 +43,6 @@
         ©<span id="year">2022</span> | Seth Markle <span class="brk1"></span><span class="unBrk1">|</span> Idaho | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a><br>
         <span id="updated">Last Updated: 10/17/2022 10:44:49 am</span>
     </footer>
-    <div id="not-reasonable-size"><div>Sorry,<br>You can't view this page that small!</div></div>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="scripts/script.js"></script>
 </body>
