--- a/lesson/index.html
+++ b/lesson/index.html
@@ -30,12 +30,18 @@
             </li>
             <li>Lesson 04:
                 <ul>
-                    <li><a href="../lesson4/index.html">York County Homepage</a></li>
+                    <li><a href="../lesson4/index.html">Flipton County Homepage</a></li>
                 </ul>
             </li>
             <li>Lesson 05:
                 <ul>
-                    <li><a href="../lesson5/index.html">York County Homepage (Continued)</a></li>
+                    <li><a href="../lesson5/index.html">Flipton County Homepage (Continued)</a></li>
+                </ul>
+            </li>
+            <li>
+                Lesson 06:
+                <ul>
+                    <li><a href="../lesson6/index.html">Flipton County Homepage</a></li>
                 </ul>
             </li>
     </main>
