--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -4,7 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design Principles</title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;family=Ubuntu:wght@300&amp;display=swap" rel="stylesheet">
+    <link href="link rel="preconnect href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> "rel="stylesheet">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="stylesheet" href="styles/medium.css" media="(max-width: 894px) and (min-width: 650px)">
     <link rel="stylesheet" href="styles/small.css" media="(max-width: 649px)">
