--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -3,8 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design Principles</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel=href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/medium.css" media="(max-width: 894px) and (min-width: 650px)">
     <link rel="stylesheet" href="styles/small.css" media="(max-width: 649px)">
     <link rel="stylesheet" href="styles/tiny.css">
