--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -5,7 +5,7 @@
     <title>Design Principles</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel=href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/medium.css" media="(max-width: 894px) and (min-width: 650px)">
     <link rel="stylesheet" href="styles/small.css" media="(max-width: 649px)">
