--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="styles/small.css" media="(max-width: 649px)">
     <link rel="stylesheet" href="styles/tiny.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
+        </style> 
 </head>
 <body>
     <header>
