--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -41,7 +41,7 @@
             <h3>Rule of Thirds</h3>
             <div>
             <p><span>Brigham Young University - Idaho</span></p>
-            <p><a target="_blank" href="https://byui.edu/">byui.edu</a></p>
+            <p><a target="_blank" href="https://www.byui.edu/search/result?q=Rule+of+Thirds">byui.edu</a></p>
             <img src="images/byui-edu-rule-of-thirds.png" alt="example of 'rule of thirds' from byui's website">
             <p>
                 The image at the bottom of the screenshot follows the "Rule
