--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="brk1"></span>
         "Markle"
         </h1>
-        <img src="images/profile.JPG" alt="Seth Markle profile picture">
+        <img src="c:\Users\sethr\Documents\BYU-Idaho\mkdir vscode-tutorials\cd vscode-tutorials\images\profile.jpg" alt="Seth Markle profile picture">
     </header>
     <main>
         <h2>
