--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="link rel="preconnect href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> " media="all">
-    <img src="c:\Users\sethr\Documents\BYU-Idaho\mkdir vscode-tutorials\cd vscode-tutorials\images\profile.jpg"
+    <img src="c:\Users\sethr\Documents\BYU-Idaho\mkdir vscode-tutorials\cd vscode-tutorials\images\profile.jpg" alt="Seth Markle profile picture">
 </head>
 <body>
     <header> grid
